# tiny-wasm-runtime

./: Cargo.toml  README.md  err.txt
src/: binary.rs  execution.rs  lib.rs  main.rs
src/binary/: instruction.rs  module.rs  opcode.rs  section.rs  types.rs
src/execution/: instruction.rs  runtime.rs  store.rs  value.rs  wasi.rs
src/fixtures/: fibonacci.wat
